# Ridgeline

./: .gitignore  README.md  pyproject.toml
analysis/: flop_byte_model.ipynb
benchmarks/: compute_roof.py
measurement/: sync.py  timing.py
src/ridgeline/analytical/: flop_byte_model.py  roofline.py
src/ridgeline/benchmarks/: compute_roof.py  memory_roof.py
src/ridgeline/measurement/: benchmark.py  trace.py
src/ridgeline/model/: gpt3-decoder.ipynb  gpt3-kv-cache.ipynb
