[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ridgeline"
version = "0.1.0"
description = "A vendor-neutral roofline / inference profiler harness (MPS + CUDA)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
